# xvcd-ch347

./: .gitignore  CMakeLists.txt  Makefile  README.md  io_ch347.c  io_ch347.h  xvcd_win.c
.github/workflows/: build.yml
CH347/: CH347DLL.H
include/: CH347DLL.H  CH347DLL_EN.H  ch347_xvcd_api.h  io_ch347.h
src/: ch347_xvcd_api.c  io_ch347.c  xvcd.c
